--- a/css/tooplate-beldifood.css
+++ b/css/tooplate-beldifood.css
@@ -4,8 +4,8 @@
 -----------------------------------------*/
 :root {
   --white-color:                  #FFFFFF;
-  --primary-color:                #f44749;
-  --secondary-color:              #f3af24;
+  --primary-color:                #f9bf38;
+  --secondary-color:              #f9bf38;
   --section-bg-color:             #F9F9F9;
   --dark-color:                   #000000;
   --title-color:                  #565758;
